--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,8 +2,8 @@
 //color
 $project-green: #92CF2B;
 
+$color-title-text: #2D2D2D;
+$color-text-green: #84B40C;
 
-
-
-$gutter: 30px;
-$w: 1px;
+//Font size
+$font-family-base: 'Fira Sans', sans-serif;
