--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -1,3 +1,9 @@
+body {
+  font-family: $font-family-base;
+}
+
+
+//
 .hamburger-line {
   display: flex;
   width: 50px;
@@ -30,3 +36,65 @@
     }
   }
 }
+
+//button
+.btn {
+  display: inline-block;
+  padding: 20px 35px;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 400;
+  background-color: $project-green;
+  background-image: linear-gradient(90deg, #4BAE4F 9.78%, #92CF2B 100.01%);
+  color: #fff;
+  transition: all .35s ease;
+  
+  &:hover,
+  &:active {
+    background-image: none;
+    background-color: $color-title-text;
+  }
+}
+
+.input-item {
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 25px;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: $color-title-text;
+  background-color: rgba(255, 255, 255, .35);
+}
+
+.section {
+  padding-top: 40px;
+  padding-bottom: 75px;
+  
+  &-dark {
+    background-color: $color-title-text;
+  
+    .input-item,
+    .input-item::placeholder {
+      color: #fff;
+    }
+  }
+  
+  &-green {
+    background-color: $project-green;
+    
+    .input-item,
+    .input-item::placeholder {
+      color: $color-title-text;
+    }
+  }
+  
+  &-title {
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 42px;
+    color: #FFFFFF;
+    
+  }
+}
+
